v1.0.0/modules/schema/pages/class/MarketProduct.adoc
= `MarketProduct`
:toclevels: 4


+++A product traded by an RTO (e.g. energy, 10 minute spinning reserve).  Ancillary service product examples include: Regulation, Regulation Up, Regulation Down, Spinning Reserve, Non-Spinning Reserve, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketProduct`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketProduct`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketRegionResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidPriceCap {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Market {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidError {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ResourceAwardInstruction {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ProductBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



CommodityDefinition {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ReserveReq {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MarketProduct -> MarketRegionResults: MarketRegionResults


MarketProduct -> BidPriceCap: BidPriceCap


MarketProduct -> Market: Market


MarketProduct -> BidError: BidError


MarketProduct -> ResourceAwardInstruction: ResourceAwardInstruction


MarketProduct -> ProductBid: ProductBids


MarketProduct -> CommodityDefinition: CommodityDefinition


MarketProduct -> ReserveReq: ReserveReqs


MarketProduct -> DiagramObject: DiagramObjects


MarketProduct -> InstanceSet: InstanceSet


MarketProduct -> Name: Names


MarketProduct -> ChangeSetMember: PropertiesCIMDataObject


MarketProduct -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Market,`Market`>>
| 0..1
| xref::class/Market.adoc[`Market`]
| n/a

| <<MarketRegionResults,`MarketRegionResults`>>
| 0..1
| xref::class/MarketRegionResults.adoc[`MarketRegionResults`]
| n/a

| <<marketProductType,`marketProductType`>>
| 0..1
| xref::enumeration/MarketProductType.adoc[`MarketProductType`]
| +++Market product type examples:

EN (Energy)
RU (Regulation Up)
RD (Regulation Dn)
SR (Spinning Reserve)
NR (Non-Spinning Reserve)
RC (RUC)+++

| <<rampInterval,`rampInterval`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Ramping time interval for the specific market product type specified by marketProductType attribute. For example, if marketProductType = EN (from enumeration MarketProductType), then the rampInterval is the ramping time interval for Energy.+++

| <<BidError,`BidError`>>
| 0..*
| xref::class/BidError.adoc[`BidError`]
| n/a

| <<BidPriceCap,`BidPriceCap`>>
| 0..*
| xref::class/BidPriceCap.adoc[`BidPriceCap`]
| n/a

| <<CommodityDefinition,`CommodityDefinition`>>
| 0..*
| xref::class/CommodityDefinition.adoc[`CommodityDefinition`]
| n/a

| <<ProductBids,`ProductBids`>>
| 0..*
| xref::class/ProductBid.adoc[`ProductBid`]
| n/a

| <<ReserveReqs,`ReserveReqs`>>
| 0..*
| xref::class/ReserveReq.adoc[`ReserveReq`]
| +++Market product associated with reserve requirement must be a reserve or regulation product.+++

| <<ResourceAwardInstruction,`ResourceAwardInstruction`>>
| 0..*
| xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BidError]
=== `BidError`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.BidError`
| Cardinality
| 0..*
| Type
| xref::class/BidError.adoc[`BidError`]


|===

//[discrete]
[#BidPriceCap]
=== `BidPriceCap`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.BidPriceCap`
| Cardinality
| 0..*
| Type
| xref::class/BidPriceCap.adoc[`BidPriceCap`]


|===

//[discrete]
[#CommodityDefinition]
=== `CommodityDefinition`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.CommodityDefinition`
| Cardinality
| 0..*
| Type
| xref::class/CommodityDefinition.adoc[`CommodityDefinition`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Market]
=== `Market`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.Market`
| Cardinality
| 0..1
| Type
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#marketProductType]
=== `marketProductType`
+++Market product type examples:

EN (Energy)
RU (Regulation Up)
RD (Regulation Dn)
SR (Spinning Reserve)
NR (Non-Spinning Reserve)
RC (RUC)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.marketProductType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketProductType.adoc[`MarketProductType`]


|===

//[discrete]
[#MarketRegionResults]
=== `MarketRegionResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.MarketRegionResults`
| Cardinality
| 0..1
| Type
| xref::class/MarketRegionResults.adoc[`MarketRegionResults`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ProductBids]
=== `ProductBids`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ProductBids`
| Cardinality
| 0..*
| Type
| xref::class/ProductBid.adoc[`ProductBid`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rampInterval]
=== `rampInterval`
+++Ramping time interval for the specific market product type specified by marketProductType attribute. For example, if marketProductType = EN (from enumeration MarketProductType), then the rampInterval is the ramping time interval for Energy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.rampInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ReserveReqs]
=== `ReserveReqs`
+++Market product associated with reserve requirement must be a reserve or regulation product.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ReserveReqs`
| Cardinality
| 0..*
| Type
| xref::class/ReserveReq.adoc[`ReserveReq`]


|===

//[discrete]
[#ResourceAwardInstruction]
=== `ResourceAwardInstruction`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ResourceAwardInstruction`
| Cardinality
| 0..*
| Type
| xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


