v1.1.0/modules/schema/pages/class/MarketProduct.adoc
= `MarketProduct`
:toclevels: 4


+++A product traded by an RTO (e.g. energy, 10 minute spinning reserve).  Ancillary service product examples include: Regulation, Regulation Up, Regulation Down, Spinning Reserve, Non-Spinning Reserve, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketProduct`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketProduct`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BidError,`BidError`>>
//| [[slots_table.BidError]]<<BidError,`BidError`>>
| 0..* +
xref::class/BidError.adoc[`BidError`]
| _n/a_
| _n/a_

| <<BidPriceCap,`BidPriceCap`>>
//| [[slots_table.BidPriceCap]]<<BidPriceCap,`BidPriceCap`>>
| 0..* +
xref::class/BidPriceCap.adoc[`BidPriceCap`]
| _n/a_
| _n/a_

| <<CommodityDefinition,`CommodityDefinition`>>
//| [[slots_table.CommodityDefinition]]<<CommodityDefinition,`CommodityDefinition`>>
| 0..* +
xref::class/CommodityDefinition.adoc[`CommodityDefinition`]
| _n/a_
| _n/a_

| <<Market,`Market`>>
//| [[slots_table.Market]]<<Market,`Market`>>
| 0..1 +
xref::class/Market.adoc[`Market`]
| _n/a_
| _n/a_

| <<MarketRegionResults,`MarketRegionResults`>>
//| [[slots_table.MarketRegionResults]]<<MarketRegionResults,`MarketRegionResults`>>
| 0..1 +
xref::class/MarketRegionResults.adoc[`MarketRegionResults`]
| _n/a_
| _n/a_

| <<ProductBids,`ProductBids`>>
//| [[slots_table.ProductBids]]<<ProductBids,`ProductBids`>>
| 0..* +
xref::class/ProductBid.adoc[`ProductBid`]
| _n/a_
| _n/a_

| <<ReserveReqs,`ReserveReqs`>>
//| [[slots_table.ReserveReqs]]<<ReserveReqs,`ReserveReqs`>>
| 0..* +
xref::class/ReserveReq.adoc[`ReserveReq`]
| +++Market product associated with reserve requirement must be a reserve or regulation product.+++
| _n/a_

| <<ResourceAwardInstruction,`ResourceAwardInstruction`>>
//| [[slots_table.ResourceAwardInstruction]]<<ResourceAwardInstruction,`ResourceAwardInstruction`>>
| 0..* +
xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]
| _n/a_
| _n/a_

| <<marketProductType,`marketProductType`>>
//| [[slots_table.marketProductType]]<<marketProductType,`marketProductType`>>
| 0..1 +
xref::enumeration/MarketProductType.adoc[`MarketProductType`]
| +++Market product type examples:

EN (Energy)
RU (Regulation Up)
RD (Regulation Dn)
SR (Spinning Reserve)
NR...+++
| _n/a_

| <<rampInterval,`rampInterval`>>
//| [[slots_table.rampInterval]]<<rampInterval,`rampInterval`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Ramping time interval for the specific market product type specified by marketProductType attribute. For example, if...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BidError]
=== `BidError`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.BidError`
| Cardinality
| 0..*
| Type
| xref::class/BidError.adoc[`BidError`]


|===

////
[.text-left]
--
<<slots_table.BidError,&#10548;>>
--
////


//[discrete]
[#BidPriceCap]
=== `BidPriceCap`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.BidPriceCap`
| Cardinality
| 0..*
| Type
| xref::class/BidPriceCap.adoc[`BidPriceCap`]


|===

////
[.text-left]
--
<<slots_table.BidPriceCap,&#10548;>>
--
////


//[discrete]
[#CommodityDefinition]
=== `CommodityDefinition`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.CommodityDefinition`
| Cardinality
| 0..*
| Type
| xref::class/CommodityDefinition.adoc[`CommodityDefinition`]


|===

////
[.text-left]
--
<<slots_table.CommodityDefinition,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Market]
=== `Market`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.Market`
| Cardinality
| 0..1
| Type
| xref::class/Market.adoc[`Market`]


|===

////
[.text-left]
--
<<slots_table.Market,&#10548;>>
--
////


//[discrete]
[#marketProductType]
=== `marketProductType`
+++Market product type examples:

EN (Energy)
RU (Regulation Up)
RD (Regulation Dn)
SR (Spinning Reserve)
NR (Non-Spinning Reserve)
RC (RUC)+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.marketProductType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketProductType.adoc[`MarketProductType`]


|===

////
[.text-left]
--
<<slots_table.marketProductType,&#10548;>>
--
////


//[discrete]
[#MarketRegionResults]
=== `MarketRegionResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.MarketRegionResults`
| Cardinality
| 0..1
| Type
| xref::class/MarketRegionResults.adoc[`MarketRegionResults`]


|===

////
[.text-left]
--
<<slots_table.MarketRegionResults,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ProductBids]
=== `ProductBids`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ProductBids`
| Cardinality
| 0..*
| Type
| xref::class/ProductBid.adoc[`ProductBid`]


|===

////
[.text-left]
--
<<slots_table.ProductBids,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rampInterval]
=== `rampInterval`
+++Ramping time interval for the specific market product type specified by marketProductType attribute. For example, if marketProductType = EN (from enumeration MarketProductType), then the rampInterval is the ramping time interval for Energy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.rampInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rampInterval,&#10548;>>
--
////


//[discrete]
[#ReserveReqs]
=== `ReserveReqs`
+++Market product associated with reserve requirement must be a reserve or regulation product.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ReserveReqs`
| Cardinality
| 0..*
| Type
| xref::class/ReserveReq.adoc[`ReserveReq`]


|===

////
[.text-left]
--
<<slots_table.ReserveReqs,&#10548;>>
--
////


//[discrete]
[#ResourceAwardInstruction]
=== `ResourceAwardInstruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketProduct.ResourceAwardInstruction`
| Cardinality
| 0..*
| Type
| xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]


|===

////
[.text-left]
--
<<slots_table.ResourceAwardInstruction,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BidError.adoc[`BidError`] | xref::class/BidError.adoc#MarketProduct[`MarketProduct`]



| xref::class/BidPriceCap.adoc[`BidPriceCap`] | xref::class/BidPriceCap.adoc#MarketProduct[`MarketProduct`]



| xref::class/CommodityDefinition.adoc[`CommodityDefinition`] | xref::class/CommodityDefinition.adoc#MarketProduct[`MarketProduct`]



| xref::class/Market.adoc[`Market`] | xref::class/Market.adoc#MarketProducts[`MarketProducts`]



| xref::class/MarketRegionResults.adoc[`MarketRegionResults`] | xref::class/MarketRegionResults.adoc#MarketProduct[`MarketProduct`]



| xref::class/ProductBid.adoc[`ProductBid`] | xref::class/ProductBid.adoc#MarketProduct[`MarketProduct`]



| xref::class/ReserveReq.adoc[`ReserveReq`] | xref::class/ReserveReq.adoc#MarketProduct[`MarketProduct`]



| xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`] | xref::class/ResourceAwardInstruction.adoc#MarketProduct[`MarketProduct`]


|===

